@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,7 @@
 package org.springframework.context.annotation;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -25,15 +25,25 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import javax.lang.model.element.Modifier;
+
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
 import org.springframework.aop.framework.autoproxy.AutoProxyUtils;
+import org.springframework.aot.generate.GeneratedMethod;
+import org.springframework.aot.generate.GenerationContext;
+import org.springframework.aot.generate.MethodReference;
+import org.springframework.aot.hint.ResourceHints;
+import org.springframework.aot.hint.TypeReference;
 import org.springframework.beans.PropertyValues;
 import org.springframework.beans.factory.BeanClassLoaderAware;
 import org.springframework.beans.factory.BeanDefinitionStoreException;
 import org.springframework.beans.factory.BeanFactory;
 import org.springframework.beans.factory.annotation.AnnotatedBeanDefinition;
+import org.springframework.beans.factory.aot.BeanFactoryInitializationAotContribution;
+import org.springframework.beans.factory.aot.BeanFactoryInitializationAotProcessor;
+import org.springframework.beans.factory.aot.BeanFactoryInitializationCode;
 import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.config.BeanDefinitionHolder;
 import org.springframework.beans.factory.config.BeanFactoryPostProcessor;
@@ -48,6 +58,7 @@ import org.springframework.beans.factory.support.AbstractBeanDefinition;
 import org.springframework.beans.factory.support.BeanDefinitionRegistry;
 import org.springframework.beans.factory.support.BeanDefinitionRegistryPostProcessor;
 import org.springframework.beans.factory.support.BeanNameGenerator;
+import org.springframework.beans.factory.support.DefaultListableBeanFactory;
 import org.springframework.context.ApplicationStartupAware;
 import org.springframework.context.EnvironmentAware;
 import org.springframework.context.ResourceLoaderAware;
@@ -65,6 +76,9 @@ import org.springframework.core.type.AnnotationMetadata;
 import org.springframework.core.type.MethodMetadata;
 import org.springframework.core.type.classreading.CachingMetadataReaderFactory;
 import org.springframework.core.type.classreading.MetadataReaderFactory;
+import org.springframework.javapoet.CodeBlock;
+import org.springframework.javapoet.MethodSpec;
+import org.springframework.javapoet.ParameterizedTypeName;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 import org.springframework.util.ClassUtils;
@@ -89,7 +103,8 @@ import org.springframework.util.ClassUtils;
  * @since 3.0
  */
 public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPostProcessor,
-		PriorityOrdered, ResourceLoaderAware, ApplicationStartupAware, BeanClassLoaderAware, EnvironmentAware {
+		BeanFactoryInitializationAotProcessor, PriorityOrdered, ResourceLoaderAware, ApplicationStartupAware,
+		BeanClassLoaderAware, EnvironmentAware {
 
 	/**
 	 * A {@code BeanNameGenerator} using fully qualified class names as default bean names.
@@ -274,6 +289,14 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 		beanFactory.addBeanPostProcessor(new ImportAwareBeanPostProcessor(beanFactory));
 	}
 
+	@Override
+	public BeanFactoryInitializationAotContribution processAheadOfTime(
+			ConfigurableListableBeanFactory beanFactory) {
+
+		return (beanFactory.containsBean(IMPORT_REGISTRY_BEAN_NAME)
+				? new AotContribution(beanFactory) : null);
+	}
+
 	/**
 	 * Build and validate a configuration model based on the registry of
 	 * {@link Configuration} classes.
@@ -368,8 +391,8 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 				// TODO 这里是包含到现在为止所有注册到容器中的bean
 				String[] newCandidateNames = registry.getBeanDefinitionNames();
 				// TODO 这里包含的是开头提到的后处理器
-				Set<String> oldCandidateNames = new HashSet<>(Arrays.asList(candidateNames));
-				// TODO 用来记录哪些bean被解析过了
+				Set<String> oldCandidateNames = Set.of(candidateNames);
+				// TODO 这里包含的是开头提到的后处理器
 				Set<String> alreadyParsedClasses = new HashSet<>();
 				for (ConfigurationClass configurationClass : alreadyParsed) {
 					alreadyParsedClasses.add(configurationClass.getMetadata().getClassName());
@@ -397,11 +420,11 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 			sbr.registerSingleton(IMPORT_REGISTRY_BEAN_NAME, parser.getImportRegistry());
 		}
 
-		if (this.metadataReaderFactory instanceof CachingMetadataReaderFactory) {
+		if (this.metadataReaderFactory instanceof CachingMetadataReaderFactory cachingMetadataReaderFactory) {
 			// Clear cache in externally provided MetadataReaderFactory; this is a no-op
 			// for a shared cache since it'll be cleared by the ApplicationContext.
 			// TODO 清空元数据缓存
-			((CachingMetadataReaderFactory) this.metadataReaderFactory).clearCache();
+			cachingMetadataReaderFactory.clearCache();
 		}
 	}
 
@@ -424,37 +447,33 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 			Object configClassAttr = beanDef.getAttribute(ConfigurationClassUtils.CONFIGURATION_CLASS_ATTRIBUTE);
 			AnnotationMetadata annotationMetadata = null;
 			MethodMetadata methodMetadata = null;
-			if (beanDef instanceof AnnotatedBeanDefinition) {
-				AnnotatedBeanDefinition annotatedBeanDefinition = (AnnotatedBeanDefinition) beanDef;
+			if (beanDef instanceof AnnotatedBeanDefinition annotatedBeanDefinition) {
 				annotationMetadata = annotatedBeanDefinition.getMetadata();
 				// TODO 如果bd本身就是一个AnnotatedBeanDefinition, 直接拿元数据方法
 				methodMetadata = annotatedBeanDefinition.getFactoryMethodMetadata();
 			}
-			if ((configClassAttr != null || methodMetadata != null) && beanDef instanceof AbstractBeanDefinition) {
+			if ((configClassAttr != null || methodMetadata != null) &&
+					(beanDef instanceof AbstractBeanDefinition abd) && !abd.hasBeanClass()) {
 				// Configuration class (full or lite) or a configuration-derived @Bean method
 				// -> eagerly resolve bean class at this point, unless it's a 'lite' configuration
 				// or component class without @Bean methods.
-				// TODO Configuration是full或lite, 或有元数据, 并且bd是AbstractBeanDefinition时
-				AbstractBeanDefinition abd = (AbstractBeanDefinition) beanDef;
-				if (!abd.hasBeanClass()) {
-					boolean liteConfigurationCandidateWithoutBeanMethods =
-							(ConfigurationClassUtils.CONFIGURATION_CLASS_LITE.equals(configClassAttr) &&
-								annotationMetadata != null && !ConfigurationClassUtils.hasBeanMethods(annotationMetadata));
-					if (!liteConfigurationCandidateWithoutBeanMethods) {
-						try {
-							// TODO 'class'不是引用时, 重新加载一下
-							abd.resolveBeanClass(this.beanClassLoader);
-						}
-						catch (Throwable ex) {
-							throw new IllegalStateException(
-									"Cannot load configuration class: " + beanDef.getBeanClassName(), ex);
-						}
+				boolean liteConfigurationCandidateWithoutBeanMethods =
+						(ConfigurationClassUtils.CONFIGURATION_CLASS_LITE.equals(configClassAttr) &&
+							annotationMetadata != null && !ConfigurationClassUtils.hasBeanMethods(annotationMetadata));
+				if (!liteConfigurationCandidateWithoutBeanMethods) {
+					try {
+						// TODO 'class'不是引用时, 重新加载一下
+						abd.resolveBeanClass(this.beanClassLoader);
+					}
+					catch (Throwable ex) {
+						throw new IllegalStateException(
+								"Cannot load configuration class: " + beanDef.getBeanClassName(), ex);
 					}
 				}
 			}
 			if (ConfigurationClassUtils.CONFIGURATION_CLASS_FULL.equals(configClassAttr)) {
 				// TODO full类型是可以进行增强的
-				if (!(beanDef instanceof AbstractBeanDefinition)) {
+				if (!(beanDef instanceof AbstractBeanDefinition abd)) {
 					// TODO 但非AbstractBeanDefinition类型的bd不能进行增强
 					throw new BeanDefinitionStoreException("Cannot enhance @Configuration bean definition '" +
 							beanName + "' since it is not stored in an AbstractBeanDefinition subclass");
@@ -467,7 +486,7 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 							"return type: Consider declaring such methods as 'static'.");
 				}
 				// TODO 放到增强处理的集合中, 所以这集合里放的全是'proxyBeanMethods'属性为false, 并且类型为AbstractBeanDefinition的bd
-				configBeanDefs.put(beanName, (AbstractBeanDefinition) beanDef);
+				configBeanDefs.put(beanName, abd);
 			}
 		}
 		if (configBeanDefs.isEmpty() || NativeDetector.inNativeImage()) {
@@ -510,23 +529,102 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 		public PropertyValues postProcessProperties(@Nullable PropertyValues pvs, Object bean, String beanName) {
 			// Inject the BeanFactory before AutowiredAnnotationBeanPostProcessor's
 			// postProcessProperties method attempts to autowire other configuration beans.
-			if (bean instanceof EnhancedConfiguration) {
-				((EnhancedConfiguration) bean).setBeanFactory(this.beanFactory);
+			if (bean instanceof EnhancedConfiguration enhancedConfiguration) {
+				enhancedConfiguration.setBeanFactory(this.beanFactory);
 			}
 			return pvs;
 		}
 
 		@Override
 		public Object postProcessBeforeInitialization(Object bean, String beanName) {
-			if (bean instanceof ImportAware) {
+			if (bean instanceof ImportAware importAware) {
 				ImportRegistry ir = this.beanFactory.getBean(IMPORT_REGISTRY_BEAN_NAME, ImportRegistry.class);
 				AnnotationMetadata importingClass = ir.getImportingClassFor(ClassUtils.getUserClass(bean).getName());
 				if (importingClass != null) {
-					((ImportAware) bean).setImportMetadata(importingClass);
+					importAware.setImportMetadata(importingClass);
 				}
 			}
 			return bean;
 		}
+	}
+
+
+	private class AotContribution implements BeanFactoryInitializationAotContribution {
+
+		private static final String BEAN_FACTORY_VARIABLE = BeanFactoryInitializationCode.BEAN_FACTORY_VARIABLE;
+
+		private static final ParameterizedTypeName STRING_STRING_MAP = ParameterizedTypeName
+				.get(Map.class, String.class, String.class);
+
+		private static final String MAPPINGS_VARIABLE = "mappings";
+
+
+		private final ConfigurableListableBeanFactory beanFactory;
+
+
+		public AotContribution(ConfigurableListableBeanFactory beanFactory) {
+			this.beanFactory = beanFactory;
+		}
+
+
+		@Override
+		public void applyTo(GenerationContext generationContext,
+				BeanFactoryInitializationCode beanFactoryInitializationCode) {
+
+			Map<String, String> mappings = buildImportAwareMappings();
+			if (!mappings.isEmpty()) {
+				GeneratedMethod generatedMethod = beanFactoryInitializationCode
+						.getMethodGenerator()
+						.generateMethod("addImportAwareBeanPostProcessors")
+						.using(builder -> generateAddPostProcessorMethod(builder,
+								mappings));
+				beanFactoryInitializationCode
+						.addInitializer(MethodReference.of(generatedMethod.getName()));
+				ResourceHints hints = generationContext.getRuntimeHints().resources();
+				mappings.forEach(
+						(target, from) -> hints.registerType(TypeReference.of(from)));
+			}
+		}
+
+		private void generateAddPostProcessorMethod(MethodSpec.Builder builder,
+				Map<String, String> mappings) {
+
+			builder.addJavadoc(
+					"Add ImportAwareBeanPostProcessor to support ImportAware beans");
+			builder.addModifiers(Modifier.PRIVATE);
+			builder.addParameter(DefaultListableBeanFactory.class, BEAN_FACTORY_VARIABLE);
+			builder.addCode(generateAddPostProcessorCode(mappings));
+		}
+
+		private CodeBlock generateAddPostProcessorCode(Map<String, String> mappings) {
+			CodeBlock.Builder builder = CodeBlock.builder();
+			builder.addStatement("$T $L = new $T<>()", STRING_STRING_MAP,
+					MAPPINGS_VARIABLE, HashMap.class);
+			mappings.forEach((type, from) -> builder.addStatement("$L.put($S, $S)",
+					MAPPINGS_VARIABLE, type, from));
+			builder.addStatement("$L.addBeanPostProcessor(new $T($L))",
+					BEAN_FACTORY_VARIABLE, ImportAwareAotBeanPostProcessor.class,
+					MAPPINGS_VARIABLE);
+			return builder.build();
+		}
+
+		private Map<String, String> buildImportAwareMappings() {
+			ImportRegistry importRegistry = this.beanFactory
+					.getBean(IMPORT_REGISTRY_BEAN_NAME, ImportRegistry.class);
+			Map<String, String> mappings = new LinkedHashMap<>();
+			for (String name : this.beanFactory.getBeanDefinitionNames()) {
+				Class<?> beanType = this.beanFactory.getType(name);
+				if (beanType != null && ImportAware.class.isAssignableFrom(beanType)) {
+					String target = ClassUtils.getUserClass(beanType).getName();
+					AnnotationMetadata from = importRegistry.getImportingClassFor(target);
+					if (from != null) {
+						mappings.put(target, from.getClassName());
+					}
+				}
+			}
+			return mappings;
+		}
+
 	}
 
 }
